#125 Not trying to load models for tests.